Exception handling added
