# src/main/java/ua/epam6/IOCRUD/controller/AccountController.java
@@ -23,7 +23,7 @@ public class AccountController {
         this.service = service;
     }
 
-    @GetMapping(value = "/account", produces = MediaType.APPLICATION_JSON_VALUE)
+    @GetMapping(value = "accounts/{id}", produces = MediaType.APPLICATION_JSON_VALUE)
     public ResponseEntity<Account> getById(@RequestParam(value = "id") Long id) {
         ServiceVisitor visitor = VisitorFactory.getVisitorByOperation(VisitorFactory.GET_BY_ID, id);
         service.doService(visitor);
@@ -33,7 +33,7 @@ public class AccountController {
         return new ResponseEntity<>(HttpStatus.NOT_FOUND);
     }
 
-    @GetMapping(value = "/accounts")
+    @GetMapping(value = "accounts")
     public ResponseEntity<List<?>> getAll() {
         ServiceVisitor visitor = VisitorFactory.getVisitorByOperation(VisitorFactory.GET_ALL, null);
         service.doService(visitor);
@@ -43,21 +43,21 @@ public class AccountController {
         return new ResponseEntity<>(HttpStatus.NOT_FOUND);
     }
 
-    @PostMapping(value = "/accounts")
+    @PostMapping(value = "accounts")
     @ResponseStatus(code = HttpStatus.CREATED)
-    public void create(@RequestBody Account account){
+    public void create(@RequestBody Account account) {
         service.doService(VisitorFactory.getVisitorByOperation(VisitorFactory.CREATE, account));
     }
 
-    @PutMapping(value = "/accounts")
+    @PutMapping(value = "accounts")
     @ResponseStatus(code = HttpStatus.NO_CONTENT)
-    public void update(@RequestBody Account account){
+    public void update(@RequestBody Account account) {
         service.doService(VisitorFactory.getVisitorByOperation(VisitorFactory.UPDATE, account));
     }
 
-    @DeleteMapping(value = "/accounts")
+    @DeleteMapping(value = "accounts/{id}")
     @ResponseStatus(code = HttpStatus.NO_CONTENT)
-    public void delete(@RequestParam(value = "id") Long id){
+    public void delete(@PathVariable Long id) {
         service.doService(VisitorFactory.getVisitorByOperation(VisitorFactory.DELETE, id));
     }
 }
