# src/main/java/ua/epam6/IOCRUD/controller/DeveloperController.java
@@ -23,7 +23,7 @@ public class DeveloperController {
         this.service = service;
     }
 
-    @GetMapping(value = "/developer", produces = MediaType.APPLICATION_JSON_VALUE)
+    @GetMapping(value = "developers/{id}", produces = MediaType.APPLICATION_JSON_VALUE)
     public ResponseEntity<Developer> getById(@RequestParam(value = "id") Long id) {
         ServiceVisitor visitor = VisitorFactory.getVisitorByOperation(VisitorFactory.GET_BY_ID, id);
         service.doService(visitor);
@@ -33,7 +33,7 @@ public class DeveloperController {
         return new ResponseEntity<>(HttpStatus.NOT_FOUND);
     }
 
-    @GetMapping(value = "/developers")
+    @GetMapping(value = "developers")
     public ResponseEntity<List<?>> getAll(){
         ServiceVisitor visitor = VisitorFactory.getVisitorByOperation(VisitorFactory.GET_ALL, null);
         service.doService(visitor);
@@ -43,19 +43,19 @@ public class DeveloperController {
         return new ResponseEntity<>(HttpStatus.NOT_FOUND);
     }
 
-    @PostMapping(value = "/developers")
+    @PostMapping(value = "developers")
     @ResponseStatus(code = HttpStatus.CREATED)
     public void create(@RequestBody Developer developer) {
         service.doService(VisitorFactory.getVisitorByOperation(VisitorFactory.CREATE, developer));
     }
 
-    @PutMapping(value = "/developers")
+    @PutMapping(value = "developers")
     @ResponseStatus(code = HttpStatus.NO_CONTENT)
     public void update(@RequestBody Developer developer) {
         service.doService(VisitorFactory.getVisitorByOperation(VisitorFactory.UPDATE, developer));
     }
 
-    @DeleteMapping(value = "/developers")
+    @DeleteMapping(value = "developers/{id}")
     @ResponseStatus(code = HttpStatus.NO_CONTENT)
     public void delete(@RequestParam(value = "id") Long id){
         service.doService(VisitorFactory.getVisitorByOperation(VisitorFactory.DELETE, id));
